syntax = "proto3";

package helloworld;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.salesforce.grpc.contrib";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {}

    // Sends the current time
    rpc SayTime (google.protobuf.Empty) returns (TimeResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloResponse {
    string message = 1;
}

// The response message containing the time
message TimeResponse {
    google.protobuf.Timestamp time = 1;
}